@@ -14,3 +14,6 @@ the appropriate section of the docs.
 
 Changelog
 =========
+
+ - Fixed a regression introduced in 1.1.0 that caused statements like ``COPY t
+   TO '/invalid/directory/'`` to get stuck instead of resulting in an error.
